Wrapping up whitemail pages

--- a/src/app/navigation-bar/navigation-bar.component.html
+++ b/src/app/navigation-bar/navigation-bar.component.html
@@ -26,8 +26,8 @@
               <li class="nav-item dropdown mainNavItem">
         <button id="navbarDropdown" class="btn navbarDropdownBtn navbarBtn nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Utilities</button>
         <div class="dropdown-menu navbarDropdownMenu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" routerLink="/whitemail">Client Whitemail</a>
-          <a class="dropdown-item" routerLink="/whitemail-new">New Whitemail</a>
+          <a class="dropdown-item" (click)="NavigateToWhitemail()">Client Whitemail</a>
+          <a class="dropdown-item" (click)="NavigateToNewWhitemail()">New Whitemail</a>
           <a class="dropdown-item">LRI</a>
           <a class="dropdown-item">Incidentals</a>
           </div>
