--- a/src/appTheme.scss
+++ b/src/appTheme.scss
@@ -19,6 +19,7 @@ $color-blue-default: #1279C0;
 $color-blue-light: #59a1d3;
 $color-blue-dark: #0a5caa;
 
+$color-warn: #ea4040;
 $color-very-pale-orange: #ffdfc7;
 $color-success: #5cb85c;
 
