--- a/src/app/whitemail/whitemail-main/whitemail-main.component.html
+++ b/src/app/whitemail/whitemail-main/whitemail-main.component.html
@@ -14,6 +14,7 @@
             {{client}}
           </mat-option>
         </mat-autocomplete>
+        <mat-icon matSuffix class="dropdownIcon">arrow_drop_down</mat-icon>
       </mat-form-field>
       <br>
     </div>
@@ -28,19 +29,17 @@
     </div>
     <div class="col-10">
       <table mat-table *ngIf="displayTable" class="mat-elevation-z8" [dataSource]="this.rootWhitemail">
-          <ng-container matColumnDef="SelectionBox">
-              <th mat-header-cell *matHeaderCellDef></th>
-              <td mat-cell *matCellDef="let element">
-                <!-- the mousedown event fixes the bug where in google chrome you cant shift click material checkboxes-->
-                  <mat-checkbox 
-                  (click)="checkSelected(element, $event)" 
-                  (mousedown)="$event.shiftKey ? $event.preventDefault() : null"
-                  class="md-checkbox" *ngIf="selectionMode == true"></mat-checkbox>
-                  <!-- (click)="$event.shiftKey ? multipleToggle(row, $event) : null" -->
+        <ng-container matColumnDef="SelectionBox">
+          <th mat-header-cell *matHeaderCellDef></th>
+          <td mat-cell *matCellDef="let element">
+            <!-- the mousedown event fixes the bug where in google chrome you cant shift click material checkboxes-->
+            <mat-checkbox (click)="checkSelected(element, $event)" (mousedown)="$event.shiftKey ? $event.preventDefault() : null"
+              class="md-checkbox" *ngIf="selectionMode == true"></mat-checkbox>
+            <!-- (click)="$event.shiftKey ? multipleToggle(row, $event) : null" -->
 
-              </td>
-              <td mat-footer-cell *matFooterCellDef></td>
-          </ng-container>
+          </td>
+          <td mat-footer-cell *matFooterCellDef></td>
+        </ng-container>
         <ng-container matColumnDef="Date">
           <th mat-header-cell *matHeaderCellDef title="Donation Date"> Date </th>
           <td mat-cell *matCellDef="let element"> {{element.DonationDate|date:'fullDate'}} </td>
@@ -60,41 +59,67 @@
         <ng-container matColumnDef="ButtonControl">
           <th mat-header-cell *matHeaderCellDef class="ButtonControlCell"> </th>
           <td mat-cell *matCellDef="let element" class="ButtonControlCell">
-              <button mat-icon-button *ngIf="element.showEditButton" (click)="navigateToEdit(element)"><i class="material-icons">edit</i></button>  
+            <button mat-icon-button *ngIf="element.showEditButton" (click)="navigateToEdit(element)"><i class="material-icons">edit</i></button>
           </td>
         </ng-container>
 
-        <!-- <ng-container matColumnDef="selectionBox">
-            <th mat-header-cell *matHeaderCellDef [ngClass]="selectionMode? 'sbcShifted':'sbc'"></th>
-            <td mat-cell *matCellDef="let client" [ngClass]="selectionMode? 'sbcShifted':'sbc'">
-                <mat-checkbox class="md-checkbox" #clientTable [(ngModel)]="client.Measure.Selected" [(indeterminate)]="client.Measure.Indeterminate"
-                    (change)="ToogleChecks(client)" *ngIf="selectionMode == true"></mat-checkbox>
-            </td>
-            <td mat-footer-cell *matFooterCellDef [ngClass]="selectionMode? 'sbcShifted':'sbc'"></td>
-        </ng-container> -->
-
 
         <tr mat-header-row *matHeaderRowDef="MainDisplayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: MainDisplayedColumns;" (mouseenter)="hoverRow(row)" (mouseleave) ="hoverLeave(row)"></tr>
+        <tr mat-row *matRowDef="let row; columns: MainDisplayedColumns;" (mouseenter)="hoverRow(row)" (mouseleave)="hoverLeave(row)"></tr>
       </table>
     </div>
+
     <div class="col-2" *ngIf="displayTable">
       <div class="stickyButtons">
         <div class="row">
           <mat-card class="mat-elevation-z8">
             <div>
-              <button mat-icon-button><i class="material-icons">add_circle</i></button>
+              <button mat-icon-button (click)="navigateToNewWM()"><i class="material-icons">add_circle</i></button>
             </div>
             <div>
               <button mat-icon-button (click)="toggleSelection()" [style.color]="selectionMode? '#1279C0' : 'black'">
-                <i class="material-icons" >list</i>
+                <i class="material-icons">list</i>
               </button>
             </div>
             <div>
-              <button mat-icon-button (click)="deleteWM()" *ngIf="selectionMode"><i class="material-icons">delete</i></button>
+              <button mat-icon-button (click)="preDeleteWM($event)" *ngIf="selectionMode"><i class="material-icons">delete</i></button>
             </div>
           </mat-card>
         </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+<div id="modalBackground" *ngIf="showDeleteModal">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 offset-md-3">
+        <mat-card class="mat-elevation-z8 deleteModalCard">
+          <div>
+          <div class="row">
+            <div class="col-6 offset-3">
+              <i class="material-icons">error_outline</i>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-10 offset-1">
+              <span id="deleteMessage1">Are you sure?</span>
+            </div>
+            <div class="col-10 offset-1">
+              <span>Do you really want to delete {{deleteNotation}}? This process cannot be undone.</span>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-12 btnContainer">
+              <button mat-raised-button class="mat-elevation-z2" id="cancelBtn" (click)="preDeleteWM($event)">Cancel</button>
+              <button mat-raised-button class="mat-elevation-z4" id="deleteBtn" (click)="deleteWM()">Delete</button>
+            </div>
+          </div>
+        </div>
+        </mat-card>
       </div>
     </div>
   </div>
