modified the design of the WM edit and added all LRI to utillities

--- a/src/app/Utilities_Pages/LRI/lri-main/lri-main.component.scss
+++ b/src/app/Utilities_Pages/LRI/lri-main/lri-main.component.scss
@@ -2,13 +2,14 @@
 
 $selectionColumnShift: 32px;
 
-.clientList{
-    width: 350px;
-}
-
 table {
     width: 100%;
   }
+
+  .mainInputBox{
+    width: 100%;
+    margin: 0 auto;
+}
 
   .emptyTableMessage{
       // height: 90vh;
