--- a/src/app/navigation-bar/navigation-bar.component.html
+++ b/src/app/navigation-bar/navigation-bar.component.html
@@ -27,9 +27,9 @@
         <button id="navbarDropdown" class="btn navbarDropdownBtn navbarBtn nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Utilities</button>
         <div class="dropdown-menu navbarDropdownMenu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" (click)="NavigateToWhitemail()">Client Whitemail</a>
-          <a class="dropdown-item" (click)="NavigateToNewWhitemail()">New Whitemail</a>
-          <a class="dropdown-item">LRI</a>
-          <a class="dropdown-item">Incidentals</a>
+          <a class="dropdown-item" (click)="NavigateToNewWhitemail()">Add Whitemail</a>
+          <a class="dropdown-item" (click)="NavigateToLRI()">Client LRI</a>
+          <a class="dropdown-item" (click)="NavigateToNewLRI()">Add LRI</a>
           </div>
   
       </li>
