--- a/src/app/Utilities_Pages/LRI/lri-main/lri-main.component.html
+++ b/src/app/Utilities_Pages/LRI/lri-main/lri-main.component.html
@@ -1,13 +1,12 @@
 <app-toolbar></app-toolbar>
 <br>
-<!-- <button mat-raised-button color="primary" (click)="openJazz()">
-    Open dialog
-  </button> -->
+
 <div class="container">
   <div class="row">
-    <div class="col-12">
-      <mat-form-field class="clientList">
-        <input type="text" placeholder="Client" aria-label="Number" matInput [formControl]="myControl"
+    <div class="col-lg-6">
+      <mat-form-field appearance="outline" class="mainInputBox">
+          <mat-label>Client</mat-label>
+        <input type="text" aria-label="Number" matInput [formControl]="myControl"
           [matAutocomplete]="auto">
         <mat-autocomplete #auto="matAutocomplete">
           <mat-option *ngFor="let client of filteredClientList | async" [value]="client" (click)="mainSelectClient(client)">
@@ -27,34 +26,27 @@
         <h5>Please Select a client</h5>
       </mat-card>
     </div>
-    <div class="col-10">
-      <table mat-table *ngIf="displayTable" class="mat-elevation-z8" [dataSource]="this.rootWhitemail">
+    <div class="col-11">
+      <table mat-table *ngIf="displayTable" class="mat-elevation-z8" [dataSource]="this.rootLRI">
         <ng-container matColumnDef="SelectionBox">
           <th mat-header-cell *matHeaderCellDef></th>
           <td mat-cell *matCellDef="let element">
-            <!-- the mousedown event fixes the bug where in google chrome you cant shift click material checkboxes-->
             <mat-checkbox (click)="checkSelected(element, $event)" (mousedown)="$event.shiftKey ? $event.preventDefault() : null"
               class="md-checkbox" *ngIf="selectionMode == true"></mat-checkbox>
-            <!-- (click)="$event.shiftKey ? multipleToggle(row, $event) : null" -->
-
           </td>
           <td mat-footer-cell *matFooterCellDef></td>
         </ng-container>
         <ng-container matColumnDef="Date">
-          <th mat-header-cell *matHeaderCellDef title="Donation Date"> Date </th>
-          <td mat-cell *matCellDef="let element"> {{element.DonationDate|date:'fullDate'}} </td>
+          <th mat-header-cell *matHeaderCellDef title="LRI Date"> Date </th>
+          <td mat-cell *matCellDef="let element"> {{element.LRIDate|date:'fullDate'}} </td>
         </ng-container>
-        <ng-container matColumnDef="Non-Donors">
-          <th mat-header-cell *matHeaderCellDef> Non-Donors </th>
-          <td mat-cell *matCellDef="let element"> {{element.NonDonors}} </td>
+        <ng-container matColumnDef="Description">
+          <th mat-header-cell *matHeaderCellDef> Description </th>
+          <td mat-cell *matCellDef="let element"> {{element.Description}} </td>
         </ng-container>
-        <ng-container matColumnDef="Donors">
-          <th mat-header-cell *matHeaderCellDef title="All donors: cash, card, and credit"> Donors </th>
-          <td mat-cell *matCellDef="let element"> {{element.TotalDonors}} </td>
-        </ng-container>
-        <ng-container matColumnDef="Gross">
-          <th mat-header-cell *matHeaderCellDef title="All donations: cash, card, and credit"> Gross </th>
-          <td mat-cell *matCellDef="let element"> {{element.TotalGross|currency:'USD':'symbol':'1.2-2'}} </td>
+        <ng-container matColumnDef="Amount">
+          <th mat-header-cell *matHeaderCellDef title="LRI entry amount"> Donors </th>
+          <td mat-cell *matCellDef="let element"> {{element.Amount|currency:'USD':'symbol':'1.2-2'}} </td>
         </ng-container>
         <ng-container matColumnDef="ButtonControl">
           <th mat-header-cell *matHeaderCellDef class="ButtonControlCell"> </th>
@@ -69,12 +61,12 @@
       </table>
     </div>
 
-    <div class="col-2" *ngIf="displayTable">
+    <div class="col-1" *ngIf="displayTable">
       <div class="stickyButtons">
         <div class="row">
           <mat-card class="mat-elevation-z8">
             <div>
-              <button mat-icon-button (click)="navigateToNewWM()"><i class="material-icons">add_circle</i></button>
+              <button mat-icon-button (click)="navigateToNew()"><i class="material-icons">add_circle</i></button>
             </div>
             <div>
               <button mat-icon-button (click)="toggleSelection()" [style.color]="selectionMode? '#1279C0' : 'black'">
